--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div id="loader" class="preloader pr__dark">
             <span class="loading">
-                <span class="txt">Cargando</span>
+                <span class="txt"></span>
                 <span class="progress">
                     <span class="bar-loading"></span>
                 </span>
@@ -596,15 +596,13 @@
                                     </div>
                                     <div class="pr__cta column">
                                         <div class="inner">
-                                            <a id="pr__contact" href="#pr__contact__form" class="button uk-button uk-button-large uk-button-default" data-uk-toggle="">Make an enquiry</a>
+                                            <a id="pr__contact" href="#pr__contact__form" class="button uk-button uk-button-large uk-button-default" data-uk-toggle="">Contactanos</a>
                                         </div>
                                     </div>
                                     <div class="pr__social column">
                                         <div class="inner">
-                                            <a href="#" class="icon pr-logo-facebook"></a>
-                                            <a href="#" class="icon pr-logo-twitter"></a>
+                                            <a href="#" class="icon pr-logo-linkedin"></a>
                                             <a href="#" class="icon pr-logo-instagram"></a>
-                                            <a href="#" class="icon pr-logo-xing"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -634,7 +632,7 @@
                                     </div>
                                     <div class="pr__copyrights column">
                                         <div class="inner">
-                                            <p>2018 © <a href="index.html">Gentium</a>, All rights reserved.</p>
+                                            <p>2024 © <a href="index.html">Alpha X</a>Todos los derechos reservados.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -653,7 +651,7 @@
                     <div class="uk-container uk-container-xsmall">
                         <div class="form-inner uk-position-relative">
                             <button class="uk-modal-close-full" type="button" data-uk-close="ratio: 2;"><span>Close</span></button>
-                            <h2 class="uk-modal-title uk-h1">Let's Talk?</h2>
+                            <h2 class="uk-modal-title uk-h1">Hablemos</h2>
                             <p>Let’s make something awesome togheter</p>
                             <form class="pr__contact pr__form" action="includes/sendemail.php">
                                 <div class="pr__form__group">
