--- a/proyectos/project-single.html
+++ b/proyectos/project-single.html
@@ -24,7 +24,7 @@
 
         <div id="loader" class="preloader pr__dark">
             <span class="loading">
-                <span class="txt">Cargando</span>
+                <span class="txt"></span>
                 <span class="progress">
                     <span class="bar-loading"></span>
                 </span>
@@ -189,9 +189,9 @@
                                                         </ul>
                                                     </div>
                                                     <div class="pr__entry__share pr__small">
-                                                        <a href="#" data-uk-tooltip="Share on Twitter"><i class="icon pr-logo-twitter"></i></a>
-                                                        <a href="#" data-uk-tooltip="Share on Facebook"><i class="icon pr-logo-facebook"></i></a>
-                                                        <a href="#" data-uk-tooltip="Share on Xing"><i class="icon pr-logo-xing"></i></a>
+                                                        <a href="#" data-uk-tooltip="Linkedin"><i class="icon pr-logo-linkedin"></i></a>
+                                                        <a href="#" data-uk-tooltip="Instagram"><i class="icon pr-logo-instagram"></i></a>
+                                                        
                                                     </div>
                                                     
                                                 </div>
